--- a/Vending Machine JP/gradle.properties
+++ b/Vending Machine JP/gradle.properties
@@ -21,3 +21,8 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+kotlin.incremental=true
+kotlin.incremental.classpath.snapshot=false
+ksp.allow.classpath.snapshot=false
+
+
